@@ -44,7 +44,6 @@ TODO: Define a maximum QSO upload rate to clublog to avoid excesive API usage.
 KLog 0.9.2
 TODO: When importing an ADIF file with several logs, create automatically the logs as detected.
 TODO: Remove all not needed fields from SetupPageLogNew::gatherAndSend() the type is enough
-TODO: Run in memory
 TODO: Keep adapting to ADIF 3.0.4
 
 NEXT:
