@@ -20,6 +20,7 @@
 - GUI: Added a Propagation Mode Combobox.
 - GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined.
 - GUI: Added a Find DX-QSL requested option.
+- Removed the option to choose to run in memory or file in the start wizard. KLog will run always using a file for the DB.
 - Added an auto complete option to auto-complete info (QTH, Locator, Name, QSL Manager & IOTA) from previously worked QSO.
 - Some minor performance improvements.
 
